--- a/Midterm/css/style.css
+++ b/Midterm/css/style.css
@@ -146,8 +146,10 @@ https://www.w3schools.com/howto/howto_js_slideshow.asp
 /*  z-index: -1;*/
 /*  margin-top: -10px;*/
 }
-
-.slides {
+.aSlides{
+	display: none;
+}
+.mSlides {
     display: none;	
 }
 
@@ -220,7 +222,7 @@ https://www.w3schools.com/howto/howto_js_slideshow.asp
 .dot-nav{
 	position: absolute;
 	bottom: 0;
-	left: 50%;
+	left: 46%;
 }
 
 .active, .dot:hover {
@@ -272,8 +274,23 @@ https://www.w3schools.com/howto/howto_js_slideshow.asp
 	font-family: 'Text Me One', sans-serif;
 }
 .bg{
-	opacity: 0.2;
+	background-image: "../img/city-7.jpg"; 
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	-webkit-filter: brightness(90%) contrast(90%) blur(2px) grayscale(10%);
+	filter: brightness(90%) contrast(90%) blur(2px) grayscale(10%) opacity(30%);  
 }
+/*.color_layer{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;  
+	height: 100%;
+	background-color: navy;
+	opacity: 0.3;
+}*/
+
 
 .description{
 	max-width: 800px;
