--- a/Midterm/css/style.css
+++ b/Midterm/css/style.css
@@ -269,8 +269,8 @@ https://www.w3schools.com/howto/howto_js_slideshow.asp
 .heading{
 	position: absolute;
 	font-size: 3.7em;
-	top: 310px;
-	left: 415px;
+	top: 280px;
+	left: 380px;
 	font-family: 'Text Me One', sans-serif;
 }
 .bg{
@@ -290,28 +290,45 @@ https://www.w3schools.com/howto/howto_js_slideshow.asp
 	background-color: navy;
 	opacity: 0.3;
 }*/
+.buttons{
+	position: absolute;
+	top: 300px;
+	right: 40px;
+	float: right;
+}
 
+.buttons button{
+	width: 200px;
+    background-color: #222; 
+    border: none;
+    color: white;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 1.5em;
+}
 
 .description{
-	max-width: 800px;
+	max-width: 600px;
 	min-width: 120px;
 	text-align: justify;
 	position: absolute;
-	left: 415px;
-	top:430px;
+	left: 370px;
+	top:380px;
 	font-size: 2.5em;
 	font-family: 'Chathura', sans-serif;
+	line-height: 1.2em;
 }
 
 .btn-toggle{
-	font-size: 2.5em;
 	font-family: 'Chathura', sans-serif;
 	text-decoration: none;
 	position: relative;
 	margin: 0 auto;
 	display: inline-block;
-
 	margin-left: 50px;
+	font-size: 2em;
 }
 
 .dropdown{
@@ -320,9 +337,9 @@ https://www.w3schools.com/howto/howto_js_slideshow.asp
 }
 
 .dropdown ul li{
-	font-size: 2.5em;
 	font-family: 'Chathura', sans-serif;
 	text-decoration: none;
+	font-size: 1.5em;
 }
 	
 /* =============================================================================
