--- a/Final/css/main.css
+++ b/Final/css/main.css
@@ -259,6 +259,7 @@ li {
     position: fixed;
     left: 15px;
     top: 20px;
+
 }
 
 .bar1,
@@ -452,6 +453,7 @@ li {
     rgba(0, 0, 0, 0.4)),
     url("../img/bg/roosevelt-island.png");
     background-size: cover;
+
 }
 .factsList{
 
@@ -469,8 +471,8 @@ li {
   width: 200px;
   float: left;
   position: relative;
+  left:19%;
   top: 22%;
-  left: 16%;
   text-align: center;
   margin: 40px;
     -webkit-transition: opacity 0.6s ease-in-out;
@@ -530,63 +532,51 @@ li {
     rgba(0, 0, 0, 0.4)),
     url("../img/bg/hills-1.jpg");
     background-size: cover;*/
+    padding-top: 0;
 }
 
-.gallery-title{
-  font-family: "Exodus Stencil", Arial, sans-serif;
-  font-size: 4.5em;
-  text-align: center;
-  color: #FFF;
-  position: relative;
-  top: 45%;
-}
+
 /*code from midterm*/
 .slideshow-container {
-  width:100%;
   position: relative;
-  margin: 0 auto;
-/*  z-index: -1;*/
-/*  margin-top: -10px;*/
+  padding: 0;
+  z-index: -100;
+/*  overflow:hidden;*/
+  margin-top: -10px;
 }
 .aSlides{
-  display: none;
+/*  display: flex;
+*/
+  display: block;
+  padding-top:0;
+  position: absolute;
+  top: 0;
+  overflow: hidden;
+  justify-content: center;
+  z-index:-100;
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 14px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  text-align: left;
-  display: inline-block;
-  max-width:100px;
-  left: 35px;
-  opacity: 0.5;
-  transition: opacity .25s ease-in-out;
+.aSlides img{
+    min-width: 100%;
+    min-height: 100%;
+    height: auto;
+    z-index:-100;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 0;
-  opacity: 0.3;
-  transition: opacity .25s ease-in-out;
+.aslides:before{
+background: linear-gradient( rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.4));
 }
+
 .active{
   background-color: #717171;
 }
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: 2.5s;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 2.5s;
 }
 
 @-webkit-keyframes fade {
@@ -598,6 +588,79 @@ li {
   from {opacity: .4}
   to {opacity: 1}
 }
+.gallery-title{
+  font-family: "Exodus Stencil", Arial, sans-serif;
+  font-size: 7.5em;
+  text-align: center;
+  color: #FFF;
+  position: relative;
+  bottom: 65%;
+    z-index:1;
+}
+
+.gallery-explore{
+  font-family: "Wask New", Arial, sans-serif;
+  font-size: .25em;
+  letter-spacing: 3px;
+  position: relative;
+  top: 20%;
+  cursor: pointer;
+
+  text-decoration: none;
+  line-height: 80px;
+  color: black;
+  display: block;
+  overflow: hidden;
+  max-width: 250px;
+  margin: 1rem auto;
+  text-transform: uppercase;
+  border: 1px solid black;
+
+}
+
+.gallery-explore {
+  color: #FFF;
+  background-color: rgba(0,0,0,0.6);
+  color: tint(#888);
+  @include triangle(up-right, 0, #FFF, true);
+  @include triangle(down-left, 0, #FFF, true, before);
+
+  &:before,
+  &:after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    border: 0 solid;
+    transform: rotate(360deg);
+  }
+
+  &:before {
+    bottom: 0;
+    left: 0;
+    border-color: transparent transparent transparent #FFF;
+  }
+
+  &:after {
+    top: 0;
+    right: 0;
+    border-color: transparent #888 transparent transparent;
+  }
+
+  &:hover {
+    color: tint(#888, 75%);
+
+    &:before,
+    &:after {
+      border-width: 80px 250px*1.05;
+    }
+  }
+}
+
+
+.gallery-explore:hover {
+
+}
 
 #aboutPanel {
     background: linear-gradient( rgba(0, 0, 0, 0.5),
@@ -605,6 +668,39 @@ li {
     url("../img/bg/tarun-ram-454974.jpg");
     background-size: cover;
 }
+.circle-crop {
+    max-width: 300px;
+    height: auto;
+    position: relative;
+    overflow: hidden;
+    left: 40%;
+    top: 25%;
+}
+.head-photo{
+    display: block;
+    margin: 0 auto;
+    height: 200px;
+    width: 300px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+    background:url("../img/pfp.jpg") center no-repeat;
+    background-size:cover;
+}
+.bio{
+  font-family: 'Slabo 27px', serif;
+  font-size: 1.3em;
+  letter-spacing: 2px;
+  color: rgba(255,255,255,0.7);
+    width: 900px;
+    position: relative;
+    text-align: justify;
+    line-height: 28px;
+  top: 25%;
+  left: 17%;
+  }
 /* =============================================================================
    Media Queries
    ========================================================================== */
@@ -644,6 +740,31 @@ li {
       top: 1%;
       margin-bottom: 15px;
       opacity: 1;
+      left: 16%;
+    }
+    .gallery-title{
+      font-size: 3em;
+      left: 20%;
+    }
+    .gallery-explore{
+      font-size: 2.5em;
+      top: 60%;
+      left: 25%;
+      width: 200px;
+    }
+    .gallery-explore{
+      font-size: 1em;
+      left: 7%;
+      top: 5%;
+    }
+    .circle-crop{
+      max-width: 300px;
+      left: 10%;
+    }
+    .bio{
+      width: 300px;
+      font-size: 0.8em;
+      line-height: 14px;
     }
 }
 
